accordion styles, fixed survey inputs getting cut off

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
 :root {
   --nav-link-color: #505050;
+
+    --wave-blue: #2b376e;
+    --wave-teal: #2a7997;
+    --dark-teal: #007297;
+    --wave-green: #008281;
+    --railway-gray: #5a5a5a;
+    --highway-gray: #787878;
+    --service-gray: #aaaaaa;
+    --roadway-gray: #d9d9d9;
+    --land-gray: #f0f0f0;
+    --line-pink: #d6078e;
+    --action-orange: #F38B00;
+
+  
 }
 
 a.nav-link,
@@ -65,6 +79,7 @@ button {
 .pinksurvey {
   background-color: #eaeaea;
   border: 2px solid #d6148e;
+  border-radius: 5px;
 }
 
 .gb {
@@ -366,19 +381,19 @@ carousel-indicators {
   max-width: 400px;
 }
 .det1 {
-  border-top: 1px dashed rgba(0, 0, 0, 0.3);
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.3);
+  border-top: 1px dashed var(--wave-teal);
+  border-bottom: 1px dashed var(--wave-teal);
 }
 .det2 {
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dashed var(--wave-teal);
 }
 .sum-text {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--wave-teal);
   font-weight: bold;
   font-size: 20px;
 }
 .plus {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--wave-teal);
   float: right;
 }
 .headhead {
@@ -530,4 +545,21 @@ figure {
 .maintain-ratio {
   object-fit: contain;
   min-width: 80px;
+}
+
+.no-style,
+.no-style ul {
+  list-style: none;
+
+}
+.no-style ul {
+  padding-left: 0;
+}
+
+.sg-survey-form {
+  border-radius: 8px;
+}
+
+.sg-survey-form label::before {
+  padding-left: 10px;
 }
